# Visualization

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
hw_doc/: ~$嘉羽_hw2.docx  ~$嘉羽_hw5.docx  ~WRL2083.tmp  王嘉羽_hw1.docx  王嘉羽_hw3.docx  王嘉羽_hw4.docx  王嘉羽_hw5.docx
lib/: CMakeLists.txt  readme.txt
src/: CMakeLists.txt  Camera.cpp  Const.cpp  LoadObj.cpp  ModelManager.cpp  PCA.ipynb  SOM.cpp  Sammon.cpp  Shader.cpp  Streamline.cpp  TextureManager.cpp  Volume.cpp  constants.cpp  main.cpp  std_image.cpp  tp.txt
src/asset/: Tooth.inf  bonsai.inf  carp.inf  engine.inf  fltr_linearTeddybear.inf  teddybear.inf
src/asset/Surface/: bunnySurface.txt  cloudSurface.txt  fountainSurface.txt  slimeSurface.txt  teapotSurface.txt  test.txt  vaseSurface.txt
src/asset/Vector/: rect1.vec  rect2.vec
src/header/: Camera.hpp  ModelManager.hpp  SOM.hpp  Sammon.hpp  Shader.hpp  Streamline.hpp  TextureManager.hpp  Volume.hpp  constants.hpp
src/shaders/: Ellipse.geom  IsoSurface.frag  IsoSurface.vert  RayCasting.frag  RayCasting.vert  SOM.frag  SOM.vert  Sammon.frag  Sammon.geom  Sammon.vert  SliceMethod.frag  SliceMethod.vert  Streamline.frag  Streamline.geom  Streamline.vert  normal.frag  normal.geom  normal.vert  streamline.geom  volumeRendering.frag  volumeRendering.vert
